Remoção de arquivos desnecessários em backend

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ mosquitto/data/**
 
 # Backend
 backend/phonerastreador/persistence/**
-
+backend/phonerastreador/target
 
 # LDAP
 ldap/etc/**
 ldap/var/**
+
