--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,49 @@ services:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
       - ./mosquitto/log:/mosquitto/log
+    networks:
+      backend_net:
+  openldap:
+    container_name: openldap
+    image: osixia/openldap:1.4.0
+    environment:
+      - LDAP_ORGANISATION=PhoneRastreador
+      - LDAP_DOMAIN=phonerastreador.com
+      - LDAP_ADMIN_PASSWORD=password
+      - LDAP_CONFIG_PASSWORD=password
+      - LDAP_RFC2307BIS_SCHEMA=false
+      - KEEP_EXISTING_CONFIG=false
+      - LDAP_TLS=false
+    networks:
+      backend_net:
+    volumes:
+      - ./ldap/etc/ldap/slapd.d:/etc/ldap/slapd.d
+      - ./ldap/var/lib/ldap:/var/lib/ldap
+    ports:
+      - "389:389"
+  ldap-user-manager:
+    container_name: ldap-manager
+    build:
+      context: ./ldap
+      dockerfile: ./ldap-user-manager/Dockerfile
+    ports:
+      - "8888:80"
+      - "18081:80"
+    environment:
+      - SERVER_HOSTNAME=localhost
+      - LDAP_URI=ldap://openldap
+      - LDAP_BASE_DN=dc=phonerastreador,dc=com
+      - LDAP_ADMINS_GROUP=admins
+      - LDAP_ADMIN_BIND_DN=cn=admin,dc=phonerastreador,dc=com
+      - LDAP_ADMIN_BIND_PWD=password
+      - ORGANISATION_NAME=PhoneRastreador
+      - NO_HTTPS=true
+      - ACCEPT_WEAK_PASSWORDS=true
+    networks:
+      backend_net:
+    depends_on:
+      - openldap
+
+networks:
+  backend_net:
+    driver: bridge
