--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -13,4 +13,12 @@ log_type information
 connection_messages true
 log_timestamp true
 allow_anonymous false
-password_file /mosquitto/config/pwfile
+# password_file /mosquitto/config/pwfile
+
+# LDAP
+auth_plugin /mosquitto/config/auth-plug.so
+auth_opt_backends ldap
+auth_opt_binddn uid=leand,ou=people,dc=phonerastreador,dc=com
+auth_opt_bindpw 290594
+auth_opt_ldap_uri ldap://openldap/ou=people,dc=phonerastreador,dc=com?cn?sub?(&(objectclass=inetOrgPerson)(uid=@))
+auth_opt_ldap_acl_deny true
