Criando container ubuntu para rodar mqtt broker

--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -1,8 +1,11 @@
-FROM eclipse-mosquitto:2.0.14
+FROM ubuntu:20.04
 
-RUN apk add libldap
-
-RUN mosquitto_passwd -b -c /mosquitto/config/pwfile owntracks 123456
-
+RUN apt-get update && \
+    apt-get install -y software-properties-common && \
+    apt-add-repository ppa:mosquitto-dev/mosquitto-ppa && \
+    apt-get install -y mosquitto && \
+    apt-get install -y mosquitto-clients && \
+    apt-get install -y libmysqlclient-dev libmysqlclient21 && \
+    apt clean
 
 CMD ["/usr/sbin/mosquitto", "-c", "/mosquitto/config/mosquitto.conf"]
