--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -1,4 +1,4 @@
-listener 8883 0.0.0.0
+listener 1883 0.0.0.0
 persistence true
 persistence_location /mosquitto/data/
 persistence_file mosquitto.db
@@ -17,8 +17,13 @@ allow_anonymous false
 
 # LDAP
 auth_plugin /mosquitto/config/auth-plug.so
-auth_opt_backends ldap
-auth_opt_binddn uid=leand,ou=people,dc=phonerastreador,dc=com
-auth_opt_bindpw 290594
-auth_opt_ldap_uri ldap://openldap/ou=people,dc=phonerastreador,dc=com?cn?sub?(&(objectclass=inetOrgPerson)(uid=@))
-auth_opt_ldap_acl_deny true
+auth_opt_backends mysql
+auth_opt_host mysql
+auth_opt_port 3306
+auth_opt_dbname mqtt
+auth_opt_user mqtt
+auth_opt_pass mqttpassword
+auth_opt_userquery SELECT PW FROM USERS WHERE USERNAME = '%s'
+# auth_opt_userquery SELECT pwhash FROM user WHERE username = '%s' AND clientid = '%s'
+auth_opt_superquery SELECT COUNT(*) FROM USERS WHERE USERNAME = '%s' AND SUPER = 1
+auth_opt_aclquery SELECT TOPIC FROM ACLS WHERE (username = '%s') AND (RW >= %d)
