--- a/backend/phonerastreador/src/main/resources/application.properties
+++ b/backend/phonerastreador/src/main/resources/application.properties
@@ -12,3 +12,7 @@ mqtt.connectionTimeout=10
 mqtt.clientId=${COMPUTERNAME}-MQTT
 mqtt.hostname=127.0.0.1
 mqtt.port=1883
+
+
+backend.mqtt.username=backend_user
+backend.mqtt.password=str0ngp@ssword$mqtt
