--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -23,7 +23,9 @@ auth_opt_port 3306
 auth_opt_dbname mqtt
 auth_opt_user mqtt
 auth_opt_pass mqttpassword
-auth_opt_userquery SELECT PW FROM DEVICE_USER WHERE USERNAME = '%s'
+# auth_opt_userquery SELECT PW FROM DEVICE_USER WHERE USERNAME = '%s'
+auth_opt_userquery SELECT senha FROM dispositivo WHERE nome = '%s'
 # auth_opt_userquery SELECT pwhash FROM user WHERE username = '%s' AND clientid = '%s'
 auth_opt_superquery SELECT COUNT(*) FROM DEVICE_USER WHERE USERNAME = '%s' AND SUPER = 1
-auth_opt_aclquery SELECT TOPIC FROM ACLS WHERE (username = '%s') AND (RW >= %d)
+# auth_opt_aclquery SELECT TOPIC FROM ACLS WHERE (username = '%s') AND (RW >= %d)
+auth_opt_aclquery SELECT topic FROM acls WHERE (username = '%s') AND (RW >= %d)
