Reescrita de consulta sql realizada por mosquitto ao MySQL

--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -26,6 +26,7 @@ auth_opt_pass mqttpassword
 # auth_opt_userquery SELECT PW FROM DEVICE_USER WHERE USERNAME = '%s'
 auth_opt_userquery SELECT senha FROM dispositivo WHERE nome = '%s'
 # auth_opt_userquery SELECT pwhash FROM user WHERE username = '%s' AND clientid = '%s'
-auth_opt_superquery SELECT COUNT(*) FROM DEVICE_USER WHERE USERNAME = '%s' AND SUPER = 1
+# auth_opt_superquery SELECT COUNT(*) FROM DEVICE_USER WHERE USERNAME = '%s' AND SUPER = 1
+auth_opt_superquery SELECT COUNT(*) FROM dispositivo WHERE nome = '%s' AND admin = 1
 # auth_opt_aclquery SELECT TOPIC FROM ACLS WHERE (username = '%s') AND (RW >= %d)
-auth_opt_aclquery SELECT topic FROM acls WHERE (username = '%s') AND (RW >= %d)
+auth_opt_aclquery SELECT topic FROM acls WHERE (nome = '%s') AND (rw >= %d)
