--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mqtt
 spring.datasource.username=mqtt
 spring.datasource.password=mqttpassword
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql= true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 app.jwt.expiracao=3600
@@ -16,3 +16,4 @@ app.mqtt.porta=1883
 app.mqtt.username=backend_user
 app.mqtt.senha=str0ngp@ssword
 app.mqtt.email=teste@exemplo.com
+app.mqtt.nome=Phone Rastreador
