--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,11 @@ services:
     ports:
       - 3306:3306
 
-  mqtt-ubuntu:
+  mosquitto:
     build:
       context: ./mosquitto
       dockerfile: .
-    container_name: mqtt-ubuntu
+    container_name: mosquitto
     volumes:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
