--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,21 @@ services:
       backend_net:
     depends_on:
       - mysql
-
+  backend:
+    build:
+      context: ./backend
+      dockerfile: .
+    container_name: backend
+    ports:
+      - 8080:8080
+    environment:
+      - MOSQUITTO_HOST=mosquitto
+      - MYSQL_HOST=mysql
+    networks:
+      backend_net:
+    depends_on:
+      - mysql
+      - mosquitto
 networks:
   backend_net:
     driver: bridge
