--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       backend_net:
     ports:
       - 3306:3306
+    healthcheck:
+      test: mysql --user=root --password=$$MYSQL_ROOT_PASSWORD -e 'select count(*) from mqtt.dispositivo' mqtt
 
   mosquitto:
     build:
@@ -32,7 +34,8 @@ services:
     networks:
       backend_net:
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
   backend:
     build:
       context: ./backend
