--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,12 @@ services:
     depends_on:
       - mysql
       - mosquitto
+    healthcheck:
+      test: wget -S -O - http://localhost:8080/health 2>&1 | head -n 5 | grep 204 || exit 1
+      interval: 15s
+      timeout: 30s
+      retries: 5
+      start_period: 20s
 networks:
   backend_net:
     driver: bridge
