Correção do cors

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,4 @@ app.mqtt.username=backend_user
 app.mqtt.senha=str0ngp@ssword
 app.mqtt.email=teste@exemplo.com
 app.mqtt.nome=Phone Rastreador
+cors.allowedOrigins=${SPRING_ALLOWED_ORIGINS:}
