--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~12.2.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
