--- a/local.yml
+++ b/local.yml
@@ -25,9 +25,9 @@ services:
       dockerfile: .
     container_name: mosquitto
     volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
+      - ./mosquitto/local/config:/mosquitto/config
+      - ./mosquitto/local/data:/mosquitto/data
+      - ./mosquitto/local/log:/mosquitto/log
     ports:
       - 1883:1883
       - 8883:8883
