Criada rota para baixar configurações

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,5 @@ app.mqtt.senha=str0ngp@ssword
 app.mqtt.email=teste@exemplo.com
 app.mqtt.nome=Phone Rastreador
 cors.allowedOrigins=${SPRING_ALLOWED_ORIGINS:http://phonerastreador.ml,http://www.phonerastreador.ml,https://phonerastreador.ml,https://www.phonerastreador.ml}
+app.config.host=${OWNTRACK_HOST:phonerastreador.ml}
+
